feat: agrega DataTable, filtros avanzados, auto-cierre de avisos, soporte de pagos multiples con extension inteligente y contenerizacion completa con Docker Compose